Add in normalized ranks to ease attribute comparisons.

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
       <li>The size of a vertex corresponds to its PageRank value.</li>
       <li>The size of its label corresponds to its betweenness centrality.</li>
       <li>The layout is a degree-sorted circle based on group membership, with saved and reloadable manual positioning.</li>
+      <li>The vertex's background is a local copy of the character's profile image on http://gameofthrones.wikia.com.</li>
     </ul>
 
     <h4>How did you make this?</h4>
