Fix padding in info box; improve docs

--- a/index.html
+++ b/index.html
@@ -41,9 +41,10 @@
   <button id="about" class="btn btn-default"><i class="fa fa-info"></i></button>
 
   <div id="about-content" class="about-content">
-    <h3>Interactive Network of Thrones</h3>
+    <h3>Network of Thrones</h3>
+    <h4>SAND Edition</h4>
 
-    <p>This map is a zoomable, searchable network visualization of the <a target="_blank" href="https://www.macalester.edu/~abeverid/thrones.html">Storm of Swords Network <i class="fa fa-external-link"></i></a> published by Andrew Beveridge at Macalaster.</p>
+    <p>This map is a zoomable, searchable network visualization of the <a target="_blank" href="https://www.macalester.edu/~abeverid/thrones.html">Storm of Swords Network <i class="fa fa-external-link"></i></a> published by Dr. Andrew Beveridge at Macalaster College.</p>
 
     <p>A. Beveridge and J. Shan, "Network of Thrones," Math Horizons Magazine , Vol. 23, No. 4 (2016), pp. 18-22.</p>
 
@@ -59,13 +60,17 @@
     </ul>
 
     <h4>How did you make this?</h4>
+    <p>The code is <a target="_blank" href="https://github.com/testedminds/sand-network-of-thrones/blob/master/Network%20of%20Thrones.ipynb">on Github <i class="fa fa-external-link"></i></a>.</p>
+
     <p>This app was made using <a target="_blank" href="http://js.cytoscape.org">Cytoscape.js <i class="fa fa-external-link"></i></a>
       based on their <a target="_blank" href="http://www.wineandcheesemap.com">Wine and Cheese Demo <i class="fa fa-external-link"></i></a>.</p>
 
-    <p>The code is <a target="_blank" href="https://github.com/testedminds/sand-network-of-thrones/blob/master/Network%20of%20Thrones.ipynb">on Github <i class="fa fa-external-link"></i></a>.</p>
-    <p>Also see the <a target="_blank" href="https://github.com/testedminds/sand">SAND repo<i class="fa fa-external-link"></i></a> for examples of applying network analysis and visualization to system and software architecture.</p>
+    <p>Also see the <a target="_blank" href="https://github.com/testedminds/sand">SAND repo <i class="fa fa-external-link"></i></a> for examples of applying network analysis and visualization to systems architecture.</p>
 
     <p>Built by <a target="_blank" href="https://www.twitter.com/bobbynorton">Bobby Norton</a>.</p>
+
+    <h4>But...why?</h4>
+    <p>SAND is a network analytics toolkit and workflow written in Python. SAND focuses on the domain of network data in systems architecture, but the principles are useful for analysis of network data in other domains. The Network of Thrones dataset provides a basis to calibrate SAND against an existing network analysis. It acts as a case study and functional test for SAND, but is hopefully useful and entertaining in its own right.</p>
   </div>
 </body>
 </html>
