--- a/index.html
+++ b/index.html
@@ -72,5 +72,20 @@
     <h4>But...why?</h4>
     <p>SAND is a network analytics toolkit and workflow written in Python. SAND focuses on the domain of network data in systems architecture, but the principles are useful for analysis of network data in other domains. The Network of Thrones dataset provides a basis to calibrate SAND against an existing network analysis. It acts as a case study and functional test for SAND, but is hopefully useful and entertaining in its own right.</p>
   </div>
+
+<script type="text/javascript">
+  var _gauges = _gauges || [];
+  (function() {
+    var t   = document.createElement('script');
+    t.type  = 'text/javascript';
+    t.async = true;
+    t.id    = 'gauges-tracker';
+    t.setAttribute('data-site-id', '59cbc3597218b518761c816f');
+    t.setAttribute('data-track-path', 'https://track.gaug.es/track.gif');
+    t.src = 'https://d36ee2fcip1434.cloudfront.net/track.js';
+    var s = document.getElementsByTagName('script')[0];
+    s.parentNode.insertBefore(t, s);
+  })();
+</script>
 </body>
 </html>
